KVMホストとkickstartとかゲスト作成対応

--- a/chef/site-cookbooks/httpd/files/default/httpd.conf
+++ b/chef/site-cookbooks/httpd/files/default/httpd.conf
@@ -22,7 +22,7 @@ DocumentRoot "/var/www/html"
 </Directory>
 
 <Directory "/var/www/html">
-    Options FollowSymLinks
+    Options Indexes FollowSymLinks
     AllowOverride None
     Require all granted
 </Directory>
