add recipe munin::server

--- a/chef/site-cookbooks/munin/files/default/munin-node.conf
+++ b/chef/site-cookbooks/munin/files/default/munin-node.conf
@@ -17,7 +17,7 @@ ignore_file \.dpkg-(tmp|new|old|dist)$
 ignore_file \.rpm(save|new)$
 ignore_file \.pod$
 
-cidr_allow 192.168.0/0/16
+cidr_allow 192.168.0.0/16
 cidr_allow 172.16.0.0/12
 cidr_allow 10.0.0.0/8
 cidr_allow 127.0.0.0/8
